force-app/main/default/objects/Cost_Ledger__c/Cost_Ledger__c.object-meta.xml
<CustomObject>
    <label>Cost Ledger</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Cost ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>