force-app/main/default/objects/Cost_Ledger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cost Ledgers</relationshipLabel>
    <relationshipName>Cost_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>