force-app/main/default/objects/Cost_Ledger__c/fields/Amount_of_cost__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_cost__c</fullName>
    <label>Amount of cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>