force-app/main/default/objects/Cost_Ledger__c/fields/Cost_type__c.field-meta.xml
<CustomField>
    <fullName>Cost_type__c</fullName>
    <label>Cost type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Category</valueSetName>
    </valueSet>
</CustomField>