force-app/main/default/objects/Cost_Ledger__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cost Ledgers</relationshipLabel>
    <relationshipName>Cost_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>