force-app/main/default/objects/Cost_Ledger__c/fields/Marketing_campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Cost Ledgers</relationshipLabel>
    <relationshipName>Cost_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>