force-app/main/default/objects/Cost_Ledger__c/fields/Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Spend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spend period</label>
    <referenceTo>Marketing_Spend_Period__c</referenceTo>
    <relationshipLabel>Cost Ledgers</relationshipLabel>
    <relationshipName>Cost_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>