force-app/main/default/objects/Cost_Ledger__c/fields/Time_of_cost__c.field-meta.xml
<CustomField>
    <fullName>Time_of_cost__c</fullName>
    <label>Time of cost</label>
    <type>DateTime</type>
</CustomField>