force-app/main/default/objects/Cost_Ledger__c/fields/Total_Spend_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_Value__c</fullName>
    <formula>IF( AND(ISPICKVAL( Cost_type__c , &apos;Advertising&apos;),OR(Lead__r.Is_Lost__c , Lead__r.IsConverted ) )  ,  Amount_of_cost__c , 0)</formula>
    <label>Total Spend Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>