force-app/main/default/objects/Cost_Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <columns>Marketing_campaign__c</columns>
    <columns>Amount_of_cost__c</columns>
    <columns>Cost_type__c</columns>
    <columns>Marketing_Spend__c</columns>
    <columns>Time_of_cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>